--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,7 +18,7 @@
         "*" : ["./node_modules/@types/*", "*"],
     }
   },
-  "include": ["./packages/**/dist/cjs/index.d.ts"],
+  "include": ["./packages/**/dist/cjs/index.d.ts", "typings.d.ts"],
   "exclude": [
     "node_modules",
     "./node_modules",
