--- a/packages/mui-component-mapper/package.json
+++ b/packages/mui-component-mapper/package.json
@@ -5,17 +5,14 @@
   "main": "dist/cjs/index.js",
   "module": "dist/esm/index.js",
   "typings": "dist/cjs/index.d.ts",
-  "files": [
-    "dist/"
-  ],
   "license": "Apache-2.0",
   "scripts": {
     "start": "webpack-dev-server --env dev --config ./config/webpack.config.js --open --hot",
-    "build": "yarn build:cjs && yarn build:esm && yarn build:umd && yarn build:typings",
-    "build:cjs": "BABEL_ENV=cjs rollup -c ./rollup.config.js --format=cjs --environment FORMAT:cjs",
-    "build:esm": "BABEL_ENV=esm rollup -c ./rollup.config.js --format=esm --environment FORMAT:esm",
-    "build:umd": "rollup -c ./rollup.config.js --format=umd --environment FORMAT:umd",
-    "build:typings": "node ../../scripts/copy-files.js",
+    "build": "yarn build:cjs && yarn build:esm && yarn build:typings && yarn build:packages",
+    "build:cjs": "BABEL_ENV=cjs babel src --out-dir ./ --ignore \"src/tests/*\"",
+    "build:esm": "BABEL_ENV=esm babel src --out-dir ./esm --ignore \"src/tests/*\"",
+    "build:typings": "node ../../scripts/generate-typings.js",
+    "build:packages": "node ../../scripts/generate-packages.js",
     "vendor": "webpack --env vendor --config ./config/webpack.config.js",
     "release": "semantic-release"
   },
@@ -48,8 +45,6 @@
     "react-dom": "^16.13.1",
     "regenerator-runtime": "^0.12.1",
     "resolve-url-loader": "^3.0.0",
-    "rollup-plugin-sourcemaps": "^0.5.0",
-    "rollup-pluginutils": "^2.8.2",
     "sass-loader": "^7.1.0",
     "semantic-release": "^17.2.3",
     "style-loader": "^0.23.1",
