--- a/packages/blueprint-component-mapper/package.json
+++ b/packages/blueprint-component-mapper/package.json
@@ -61,6 +61,7 @@
     "@blueprintjs/select": "^3.12.3"
   },
   "dependencies": {
+    "@data-driven-forms/common": "*",
     "clsx": "^1.1.0",
     "prop-types": "^15.7.2"
   }
