--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   "private": true,
   "scripts": {
     "bootstrap": "lerna bootstrap",
-    "build": "lerna run build --concurrency 1 --ignore @data-driven-forms/react-renderer-demo --ignore @data-driven-forms/pf3-component-mapper",
+    "build": "yarn clean-build && lerna run build --concurrency 1 --ignore @data-driven-forms/react-renderer-demo --ignore @data-driven-forms/pf3-component-mapper",
     "vendor": "lerna run vendor",
     "test": "jest --coverage",
     "test:ci": "jest --coverage --runInBand",
@@ -27,12 +27,14 @@
   ],
   "jest": {
     "verbose": true,
+    "testPathIgnorePatterns": ["/node_modules/", "/pf3-component-mapper/"],
     "setupFiles": [
       "<rootDir>/config/jest.setup.js"
     ],
     "collectCoverageFrom": [
       "<rootDir>/packages/**/src/**/*.js",
       "!<rootDir>/packages/react-renderer-demo/**/*.js",
+      "!<rootDir>/packages/pf3-component-mapper/**/*.js",
       "!<rootDir>/packages/**/dist",
       "!<rootDir>/templates/**/*.js"
     ],
