--- a/packages/pf3-component-mapper/package.json
+++ b/packages/pf3-component-mapper/package.json
@@ -7,6 +7,7 @@
   "files": [
     "dist/"
   ],
+  "private": true,
   "license": "Apache-2.0",
   "scripts": {
     "start": "webpack-dev-server --env dev --config ./config/webpack.config.js --open --hot",
